[tool.poetry]
name = "taxi-demand-predictor"
version = "0.1.0"
description = ""
authors = ["Ari <me@ari.io>"]
readme = "README.md"
packages = [{include = "taxi_demand_predictor"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.31.0"
ipykernel = "^6.24.0"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
